# dclaw-translate

./: .env.example  AGENTS.md  CLAUDE.md  PLAN-v1.2.md  PRODUCT-SPEC.md  README.md  REVISED-PRD.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/api/: main.py
backend/app/api/routes/: health.py
backend/app/api/v1/: dashboard.py  documents.py  glossary.py  memory.py  providers.py  qa.py  translate.py  translations.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  document.py  glossary.py  llm_provider.py  qa_check.py  review.py  translation.py  translation_memory.py
backend/app/repositories/: document_repo.py  glossary_repo.py  llm_provider_repo.py  qa_repo.py  translation_memory_repo.py  translation_repo.py
backend/app/schemas/: document.py  glossary.py  llm_provider.py  qa.py  translation.py
backend/app/services/: document_service.py  glossary_service.py  llm_service.py  qa_engine.py  review_service.py  seed.py  tm_service.py  translation_service.py
backend/tests/: test_dashboard.py  test_documents.py  test_glossary.py  test_providers.py  test_qa.py  test_translation_memory.py  test_translations.py
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
helm/: Chart.yaml  values.yaml
(+37 files in other folders)
